# bhansa-generator-testova-lqbk

./: .gitignore  CHANGELOG.md  README.md  build.py  generator-testova-linux.spec  generator-testova-win.spec  pyproject.toml  uputstvo.html
src/: config.py  file_utils.py  main.py  reader.py  ui.py  writer.py
tests/: test_file_utils.py  test_reader.py  test_writer.py
tests/fixtures/baza/odgovori/ndo/: 1.docx  2.docx  3.docx  4.docx  5.docx  6.docx  7.docx  8.docx
tests/fixtures/baza/odgovori/npo/: 1.docx  10.docx  2.docx  3.docx  4.docx  5.docx  6.docx  7.docx  8.docx  9.docx
tests/fixtures/baza/odgovori/nto/: 1.docx  2.docx  3.docx  4.docx  5.docx  6.docx
tests/fixtures/baza/pitanja/ndo/: 1.docx  2.docx  3.docx  4.docx  5.docx  6.docx  7.docx  8.docx
tests/fixtures/baza/pitanja/npo/: 1.docx  10.docx  2.docx  3.docx  4.docx  5.docx  6.docx  7.docx  8.docx  9.docx
tests/fixtures/baza/pitanja/nto/: 1.docx  2.docx  3.docx  4.docx  5.docx  6.docx
tests/fixtures/baza/predlosci/: naslovna-strana-za-teorijsku-provjeru-znanja.docx  naslovna.docx  template-naslovna-odgovori.docx  template-oblast-naslovna-odgovori.docx  template-oblast-naslovna.docx
