[project]
name = "generator-testova"
version = "1.0.1"
description = "Generator testova"
requires-python = ">=3.10"
dependencies = [
    "openpyxl",
    "python-docx",
    "spire.doc",
    "docxtpl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "types-openpyxl",
    "pyinstaller",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
ignore_missing_imports = true