[project]
name = "generator-testova-lqbk"
version = "1.7.0"
description = "Generator testova LQBK"
requires-python = ">=3.10"
dependencies = [
    "openpyxl",
    "python-docx",
    "spire.doc",
    "docxtpl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "types-openpyxl",
    "cx-Freeze",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
ignore_missing_imports = true

[[tool.cxfreeze.executables]]
script = "src/main.py"
target_name = "generator-testova"

[tool.cxfreeze.build_exe]
build_exe = "dist/generator-testova-lqbk"